--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="swipe_left_for_register">Swipe Left for Register</string>
-    <string name="login">Login</string>
+    <string name="swipe_left_for_register">Swipe Left to Register</string>
+    <string name="login">Welcome!</string>
     <string name="password">Password</string>
     <string name="e_mail">Moodle ID</string>
-    <string name="tag"></string>
-    <string name="your_department">Your Department</string>
-    <string name="swipe_right_for_login">Swipe Right for Login</string>
-    <string name="register">Register</string>
+    <string name="taglogin">Sign In to continue</string>
+    <string name="tagsignin">Create a new account</string>
+    <string name="your_department">Department</string>
+    <string name="swipe_right_for_login">Swipe Right to Login</string>
+    <string name="register">Hi!</string>
     <string name="re_type_password">Re-type Password</string>
-    <string name="your_firstname">Your First Name</string>
-    <string name="your_lastname">Your Last Name</string>
+    <string name="your_firstname">First Name</string>
+    <string name="your_lastname">Last Name</string>
 </resources>
